# New_Minimum_Snap

./: CMakeLists.txt  README.md  package.xml
include/optimize_trim/: OoqpOptimize.h  bezier_curve.h  trim_point.h
launch/: optimize_trim.launch  test_ooqp.launch
msg/: eigen2ros.msg
src/: OoqpOptimize.cpp  bezier_curve.cpp  optimize_trim.cpp  subCoeff.cpp  test_ooqp.cpp  trim_point.cpp
